<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/showHideFields"
                android:text="@string/show_additional_fields"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="end">
            </Button>
            <EditText
                android:id="@+id/contactNameEditText"
                android:inputType="text"
                android:hint="@string/name"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>
            <EditText
                android:id="@+id/contactPhoneNumberEditText"
                android:inputType="none"
                android:hint="@string/phone"
                android:enabled="false"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>
            <EditText
                android:id="@+id/contactEmailEditText"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>
            <EditText
                android:id="@+id/contactAddressEditText"
                android:inputType="text"
                android:hint="@string/address"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/saveButton"
                    android:text="@string/save"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content">
                </Button>
                <Button
                    android:id="@+id/cancelButton"
                    android:text="@string/cancel"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content">
                </Button>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/hiddenContainerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
                <EditText
                    android:id="@+id/contactJobTitleEditText"
                    android:inputType="text"
                    android:hint="@string/job_title"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
                <EditText
                    android:id="@+id/contactCompanyEditText"
                    android:inputType="text"
                    android:hint="@string/company"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
                <EditText
                    android:id="@+id/contactWebsiteEditText"
                    android:inputType="text"
                    android:hint="@string/website"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
                <EditText
                    android:id="@+id/contactIMEditText"
                    android:inputType="text"
                    android:hint="@string/im"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>